// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TopGenresSection > should match snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        class="flex flex-col gap-8 mb-6 md:mb-12 lg:mb-24"
      >
        <header
          class="flex justify-between"
        >
          <h2
            class="text-5xl"
          >
            Top Genres
          </h2>
        </header>
        <main
          class="flex flex-col gap-12"
        >
          <div
            class="flex flex-row flex-wrap gap-2"
          >
            <div>
              <div
                class="w-max p-2 rounded-xl whitespace-nowrap text-white bg-neutral-700"
              >
                Atmospheric Black Metal
              </div>
            </div>
            <div>
              <div
                class="w-max p-2 rounded-xl whitespace-nowrap text-white bg-neutral-700"
              >
                Black Metal
              </div>
            </div>
            <div>
              <div
                class="w-max p-2 rounded-xl whitespace-nowrap text-white bg-neutral-700"
              >
                Metal
              </div>
            </div>
          </div>
        </main>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      class="flex flex-col gap-8 mb-6 md:mb-12 lg:mb-24"
    >
      <header
        class="flex justify-between"
      >
        <h2
          class="text-5xl"
        >
          Top Genres
        </h2>
      </header>
      <main
        class="flex flex-col gap-12"
      >
        <div
          class="flex flex-row flex-wrap gap-2"
        >
          <div>
            <div
              class="w-max p-2 rounded-xl whitespace-nowrap text-white bg-neutral-700"
            >
              Atmospheric Black Metal
            </div>
          </div>
          <div>
            <div
              class="w-max p-2 rounded-xl whitespace-nowrap text-white bg-neutral-700"
            >
              Black Metal
            </div>
          </div>
          <div>
            <div
              class="w-max p-2 rounded-xl whitespace-nowrap text-white bg-neutral-700"
            >
              Metal
            </div>
          </div>
        </div>
      </main>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TopGenresSection > should match snapshot with no data 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        class="flex flex-col gap-8 mb-6 md:mb-12 lg:mb-24"
      >
        <header
          class="flex justify-between"
        >
          <h2
            class="text-5xl"
          >
            Top Genres
          </h2>
        </header>
        <main
          class="flex flex-col gap-12"
        >
          <div
            class="relative w-full rounded-lg border px-4 py-3 text-sm [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg~*]:pl-7 border-destructive/50 text-destructive dark:border-destructive [&>svg]:text-destructive"
            role="alert"
          >
            <svg
              aria-hidden="true"
              class="h-5 w-5"
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.172 16.172a4 4 0 015.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <h5
              class="mb-1 font-medium leading-none tracking-tight"
            >
              No Data
            </h5>
            <div
              class="text-sm [&_p]:leading-relaxed"
            >
              Oops... Looks like nothing's there yet.
            </div>
          </div>
        </main>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      class="flex flex-col gap-8 mb-6 md:mb-12 lg:mb-24"
    >
      <header
        class="flex justify-between"
      >
        <h2
          class="text-5xl"
        >
          Top Genres
        </h2>
      </header>
      <main
        class="flex flex-col gap-12"
      >
        <div
          class="relative w-full rounded-lg border px-4 py-3 text-sm [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg~*]:pl-7 border-destructive/50 text-destructive dark:border-destructive [&>svg]:text-destructive"
          role="alert"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5"
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.172 16.172a4 4 0 015.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
          <h5
            class="mb-1 font-medium leading-none tracking-tight"
          >
            No Data
          </h5>
          <div
            class="text-sm [&_p]:leading-relaxed"
          >
            Oops... Looks like nothing's there yet.
          </div>
        </div>
      </main>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
